--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
-    "axios": "^0.21.0",
-    "firebase": "^7.19.1",
+    "axios": "^0.21.1",
+    "firebase": "^8.2.4",
     "radium": "^0.26.0",
     "react": "^16.13.1",
     "react-card-carousel": "^1.1.3",
@@ -29,7 +29,7 @@
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.1",
     "react-scroll-text": "^1.0.1",
     "react-scrollbar": "^0.5.6",
     "react-shadow-scroll": "^2.1.0",
